@@ -1,3 +1,9 @@
+2023-05-18 Riccardo Mottola <rm@gnu.org>
+
+	* DBSFTypeWrappers.h
+	* DBSFTypeWrappers.m:
+	Add stringValueSF method, to return value in expected SF format, differing from stringValue which may be type and locale dependent. for DateTime add parsing of yyyy-MM-DD hh:mm format with timezone and DST interpertation.
+
 2021-09-24 Riccardo Mottola <rm@gnu.org>
 
 	* DBCSVReader.m:
